Actions
Bug #13422
closedufs: symbol 'iuniqtime' is multiply-defined
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error with gcc 10:
ld: fatal: symbol 'iuniqtime' is multiply-defined: (file obj64/bio.o type=OBJT; file obj64/fsflush.o type=OBJT); ld: fatal: file processing errors. No output written to obj64/libgenunix.o *** Error code 1 dmake: Fatal error: Command failed for target `obj64/libgenunix.o'
Neither bio.c nor fsflush.c are using iuniqtime.
Testing done: build/install/boot.
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ee6e522102d701504922a982938c5873c599b3ff
commit ee6e522102d701504922a982938c5873c599b3ff Author: Toomas Soome <tsoome@me.com> Date: 2021-01-19T21:22:27.000Z 13422 ufs: symbol 'iuniqtime' is multiply-defined Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions